--- a/hugo.yaml
+++ b/hugo.yaml
@@ -51,7 +51,7 @@ enableEmoji: true
 # Site parameters
 params:
   # GitHub repo URL of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/NyRvAl/nyrval.github.io
 
   features:
     # Enable portfolio section
